# hanko

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  deny.toml  flake.nix  justfile
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: CI.yml  benchmark.yml  build.yml  deny.yml  links.yml  publish.yml  scorecard.yml  security.yml  test.yml  verify.yml
assets/completions/: _hanko  _hanko.ps1  hanko.bash  hanko.elv  hanko.fish
assets/manpages/: hanko-signer-add.1  hanko-signer.1  hanko-update.1  hanko.1
benches/: load_configuration.rs  write_allowed_signers.rs
nix/: build.nix  package.nix
src/: allowed_signers.rs  cli.rs  config.rs  core.rs  github.rs  gitlab.rs  key.rs  lib.rs  main.rs  provider.rs  public_key.rs  signer.rs  source.rs  user.rs
src/allowed_signers/: file.rs  mod.rs  signer.rs  ssh.rs
src/cli/: main.rs  manage_signers.rs  manage_sources.rs  mod.rs  update.rs
src/provider/: core.rs  github.rs  gitlab.rs  mod.rs
src/source/: github.rs  gitlab.rs  main.rs  mod.rs
tests/: cli.rs  signer_cmd.rs  update_cmd.rs
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs
