[package]
name = "hanko"
description = "Keeps your Git allowed signers file up to date with signing keys configured on software development platforms like GitHub and GitLab."
version = "0.5.4"
keywords = ["git", "ssh", "security", "encryption"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
    "development-tools",
]
edition = "2024"
authors = ["Marvin Vogt <m@rvinvogt.com>"]
license = "MIT"
homepage = "https://github.com/srv6d/hanko"
repository = "https://github.com/srv6d/hanko"
readme = "README.md"
exclude = [".devcontainer", ".github", "doc/benchmark/**", "tests/**"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = "0.4.39"
clap = { version = "4.5.45", features = ["derive", "env", "string"] }
toml_edit = { version = "0.23.2", features = ["serde"] }
gix-config = { version = "0.44.0", optional = true }
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
    "gzip",
    "zstd",
    "http2",
    "macos-system-configuration", # only inclued for macOS
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
codspeed-criterion-compat = "=2.10.1"
criterion = "=0.7.0"
httpmock = "=0.7.0"
indoc = "=2.0.6"
proptest = "=1.7.0"
rstest = "=0.25.0"
serde_json = "=1.0.140"
tempfile = "=3.17.1"
reqwest = { version = "=0.12.23", default-features = false, features = ["blocking"] }

[build-dependencies]
vergen-gix = { version = "1.0.6", features = ["cargo", "rustc"] }

[package.metadata.deb]
assets = [
    { source = "target/release/hanko", dest = "/usr/bin/", mode = "755"},
    { source = "README.md", dest = "/usr/share/doc/hanko/", mode = "644"},
    { source = "assets/completions/hanko.bash", dest = "/usr/share/bash-completion/completions/hanko", mode = "644"},
    { source = "assets/completions/_hanko", dest = "/usr/share/zsh/vendor-completions/", mode = "644"},
    { source = "assets/completions/hanko.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644"},
    { source = "assets/completions/hanko.elv", dest = "/usr/share/elvish/lib/", mode = "644"},
    { source = "assets/manpages/*", dest = "/usr/share/man/man1/", mode = "644"},
]

[features]
default = ["detect-allowed-signers"]
detect-allowed-signers = ["dep:gix-config"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
panic = "warn"
# Allowed pedantic lints
missing_errors_doc = "allow" # Crate is not intended to be used as a library

[[bench]]
name = "write_allowed_signers"
harness = false

[[bench]]
name = "load_configuration"
harness = false

[profile.release]
lto = true
panic = "abort"
