[package]
name = "hanko"
description = "Keeps your Git allowed signers file up to date with signing keys configured on software development platforms like GitHub and GitLab."
version = "1.0.0"
keywords = ["git", "ssh", "security", "encryption"]
categories = [
    "authentication",
    "command-line-utilities",
    "cryptography",
    "development-tools",
]
edition = "2024"
authors = ["Marvin Vogt <m@rvinvogt.com>"]
license = "MIT"
homepage = "https://github.com/srv6d/hanko"
repository = "https://github.com/srv6d/hanko"
readme = "README.md"
exclude = [".devcontainer", ".github", "doc/benchmark/**", "tests/**"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env", "string"] }
toml_edit = { version = "0.24.0", features = ["serde"] }
gix-config = { version = "0.51.0", optional = true }
reqwest = { version = "0.13.2", default-features = true, features = [
    "json",
    "gzip",
    "zstd",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
# Pin criterion (and related tooling) explicitly to ensure stable benchmarks
codspeed-criterion-compat = "=4.2.0"
criterion = "=0.8.1"
assert_cmd = "2.1.2"
predicates = "3.1.3"
httpmock = "0.8.2"
indoc = "2.0.7"
proptest = "1.9.0"
rstest = "0.26.1"
serde_json = "1.0.148"
tempfile = "3.23.0"
reqwest = { version = "0.13.2", features = ["blocking"] }

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["cargo", "rustc"] }

[package.metadata.deb]
assets = [
    { source = "target/release/hanko", dest = "/usr/bin/", mode = "755"},
    { source = "README.md", dest = "/usr/share/doc/hanko/", mode = "644"},
    { source = "assets/completions/hanko.bash", dest = "/usr/share/bash-completion/completions/hanko", mode = "644"},
    { source = "assets/completions/_hanko", dest = "/usr/share/zsh/vendor-completions/", mode = "644"},
    { source = "assets/completions/hanko.fish", dest = "/usr/share/fish/vendor_completions.d/", mode = "644"},
    { source = "assets/completions/hanko.elv", dest = "/usr/share/elvish/lib/", mode = "644"},
    { source = "assets/manpages/*", dest = "/usr/share/man/man1/", mode = "644"},
]

[features]
default = ["detect-allowed-signers"]
detect-allowed-signers = ["dep:gix-config"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
panic = "warn"
# Allowed pedantic lints
missing_errors_doc = "allow" # Crate is not intended to be used as a library

[[bench]]
name = "write_allowed_signers"
harness = false

[[bench]]
name = "load_configuration"
harness = false

[profile.release]
lto = true
panic = "abort"
